# cheetah

./: .gitignore  CMakeLists.txt  README.md
libcheetah/include/: cheetahGlobal.h  cheetahmodules.h  detectorObject.h  median.h  saveCXI.h
libcheetah/src/: backgroundCorrection.cpp  detectorCorrection.cpp  detectorObject.cpp  libcheetah.cpp  powder.cpp  saveCXI.cpp  setup.cpp  worker.cpp
source/: CMakeLists.txt
source/cheetah-sacla/: main-sacla-hdf5.cpp  sacla-hdf5-reader.cpp  sacla-hdf5-reader.h
source/cheetah-sacla-api/: CMakeLists.txt  main-sacla-api.cpp  main-sacla-hdf5.cpp  prepare-cheetah-sacla-api.cpp
source/cheetah-sacla-api2/: CMakeLists.txt  cheetah_dispatcher.py  main-sacla-api2.cpp  prepare-cheetah-sacla-api2.cpp  prepare-cheetah-sacla-api2.py
source/cheetah-sacla-online-api/: CMakeLists.txt  OnlineUserAPI.h  api-stub.cpp  main-sacla-online-api.cpp  online_plotter.py
source/libcheetah/: CMakeLists.txt
source/libcheetah/include/: cheetahEvent.h  cheetahGlobal.h  cheetahmodules.h  detectorObject.h  hitfinders.h  saveCXI.h
source/libcheetah/src/: detectorObject.cpp  event.cpp  frameBuffer.cpp  global.cpp  hitfinders.cpp  libcheetah.cpp  peakfinders.cpp  photonIdentification.cpp  radialAverage.cpp  sacla.cpp  saveCXI.cpp  setup.cpp  worker.cpp
